# FastDL-Desktop

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
scripts/: tauri-with-hashes.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audit.rs  commands.rs  config.rs  ftp.rs  lib.rs  main.rs  secrets.rs  sftp.rs  storage.rs  validation.rs
src-tauri/tests/: core.rs
