[package]
name = "fastdl-desktop"
version = "0.1.0"
description = "Secure desktop FastDL package manager for Sven Co-op."
authors = ["Gabriel"]
edition = "2021"

[lib]
name = "fastdl_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
bzip2 = "0.5"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ssh2 = "0.9"
suppaftp = "8"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tar = "0.4"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Credentials"] }

[dev-dependencies]
tempfile = "3"
